--- a/boardView/styles/overlayAddTask.css
+++ b/boardView/styles/overlayAddTask.css
@@ -12,8 +12,8 @@
     z-index: 100;
     background-color: white;
     transition: transform 1.0s ease-in-out, left 1s ease-in-out;
-    /* opacity: 0;
-    visibility: hidden; */
+    opacity: 0;
+    visibility: hidden;
   }
   .middle {
     display:flex;
