--- a/boardView/styles/overlayAddTask.css
+++ b/boardView/styles/overlayAddTask.css
@@ -224,7 +224,6 @@ form {
   display: flex;
   justify-content: end;
   align-items: center;
-  margin-top: 10%;
   gap: 24px;
 }
 
@@ -357,6 +356,8 @@ form {
 
 .subtasksContent {
   width: 80%;
+  height: 113px;
+  overflow-y: auto;
 }
 
 .subtaskSingle {
@@ -407,4 +408,22 @@ form {
 
 #deleteOrSave {
   z-index: 2;
+}
+
+.pointer {
+  cursor: pointer;
+}
+
+.editSubtask {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+
+.editSubtaskDiv {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
 }
