--- a/boardView/styles/boardNote.css
+++ b/boardView/styles/boardNote.css
@@ -41,12 +41,17 @@ align-items: center;
 
 
 
-.subtask-div {
+#subtask-div {
   width:100%;
   margin:8px 0 16px 0;
   display:flex;
   align-items: center;
   gap:16px;
+}
+.subtaskList {
+  font-size:12px;
+  color:black;
+  font-weight:500;
 }
 progress {
   width: 60%;
@@ -70,9 +75,30 @@ progress::-moz-progress-bar {
   background-color:rgb(69, 137, 255);
   border-radius: 5px; 
 }
-.subtaskList {
-  font-size:12px;
-  color:black;
-  font-weight:500;
-  
+
+
+.boardNotesFooter {
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
+  width:100%;
+  margin:8px 0 8px 0;
+}
+.boardNotesContacts {
+  display:flex;
+  padding-left:8px;
+}
+.d {
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+    border-radius: 50%;
+    box-shadow: none;
+    transition: box-shadow 0.3s ease;
+    width:40px;
+    height:40px;
+    background-color: orange;
+    margin-left:-8px;
+    border:solid 0.5px black;
 }
