--- a/boardView/styles/boardNote.css
+++ b/boardView/styles/boardNote.css
@@ -2,7 +2,7 @@
 height:240px;
 width:100%;
 border:solid 0.5px rgba(0, 0, 0, 0.1);
-box-shadow: 10px 5px 10px 0px rgba(0, 0, 0, 0.15);
+box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.15);
 z-index: 100;
 border-radius:24px;
 display:flex;
@@ -101,4 +101,7 @@ progress::-moz-progress-bar {
     background-color: orange;
     margin-left:-8px;
     border:solid 0.5px black;
+}
+.boardNotesPrio {
+  margin-right:16px;
 }
