--- a/addTask/styles/style.css
+++ b/addTask/styles/style.css
@@ -1,500 +1,504 @@
-#addTask {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-}
+
 
 .header {
-    width: 90%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-direction: row;
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
 }
 
 .headerHeadline {
-    font-size: 55px;
+  font-size: 55px;
 }
 
 .body {
-    width: 100%;
-    height: calc(100vh - 100px);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+  width: 100%;
+  height: 200vh;
+  height: calc(100vh - 100px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 #addTask {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
 }
 
 .task {
-    width: 50%;
-    height: 100%;
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    flex-direction: column;
+  width: 50%;
+  height: 100%;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  flex-direction: column;
 }
 
 .headerText {
-    width: 80%;
-    text-align: start;
+  width: 80%;
+  text-align: start;
+  font-size: 20px;
+  margin-bottom: 8px;
+  font-weight: 400;
+  color: black;
 }
 
 .inputFields {
-    width: 80%;
-    height: 44px;
-    border: solid 0.5px rgb(141, 141, 141);
-    border-radius: 10px;
-    cursor: pointer;
+  width: 80%;
+  height: 44px;
+  border: solid 0.5px rgb(172, 171, 171);
+  border-radius: 10px;
+  cursor: pointer;
 }
 
 dialog::backdrop {
-    background-color: rgba(0, 0, 0, 0.8);
-    /* Dunkler Hintergrund */
+  background-color: rgba(0, 0, 0, 0.8);
+  /* Dunkler Hintergrund */
 }
 
 .theLine {
-    width: 1px;
-    height: 80%;
-    background-color: black;
+  width: 1px;
+  height: 80%;
+  background-color: black;
 }
 
 .right-side {
-    width: 50%;
-    height: 100%;
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    flex-direction: column;
+  width: 50%;
+  height: 100%;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  flex-direction: column;
 }
 
 .description {
-    height: 100px;
-    width: 80%;
-    resize: both;
-    padding: 10px;
-    font-size: 16px;
-    border: 0.5px solid rgb(141, 141, 141);
-    border-radius: 10px;
-    box-sizing: border-box;
+  height: 140px;
+  width: 84%;
+  resize: both;
+  padding: 10px;
+  font-size: 16px;
+  border: 0.5px solid rgb(141, 141, 141);
+  border-radius: 10px;
+  box-sizing: border-box;
 
-    display: flex;
-    align-items: flex-start;
-    line-height: 1.5;
+  display: flex;
+  align-items: flex-start;
+  line-height: 1.5;
 }
 
 .description::placeholder {
-    position: relative;
-    top: -24px;
-    left: 2px;
-    transform: translateY(-50%);
-    font-size: 20px;
-    color: rgba(128, 128, 128, 0.5);
-    padding: 0;
-    margin: 0;
+  position: relative;
+  top: -8px;
+  left: 2px;
+  transform: translateY(-50%);
+  font-size: 20px;
+  color: rgba(128, 128, 128, 0.5);
+  padding: 0;
+  margin: 0;
+}
+.inputFields::placeholder {
+  font-size: 20px;
+  color: rgba(128, 128, 128, 0.5);
+}
+.contactSelection::placeholder {
+  color: rgba(0, 0, 0, 1);
+  font-weight: 500;
 }
 
 .containerDescriptionImg {
-    position: relative;
-    top: -3.4%;
-    right: -37%;
+  position: relative;
+  top: -3.4%;
+  right: -39%;
 }
 
 .dropDownArrow {
-    position: relative;
-    top: -3.4%;
-    right: -37%;
-    transition: transform 0.3s ease;
+  position: relative;
+  top: -3.4%;
+  right: -37%;
+  transition: transform 0.3s ease;
 }
 
 .dateCategory {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .calendarIcon {
-    position: relative;
-    top: -29%;
-    right: -36.5%;
+  position: relative;
+  top: -29%;
+  right: -36.5%;
 }
 
 .buttons-div p {
-    margin-right: 8px;
+  margin-right: 8px;
 }
 
 .buttons-div {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    margin-bottom: 40px;
-    gap: 16px;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin-bottom: 40px;
+  gap: 16px;
 }
 
 .buttons-div div:hover {
-    box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.3);
+  box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.3);
 }
 
 .prio-buttons {
-    width: 80%;
+  width: 80%;
 }
 
 .prioButton {
-    width: 200px;
-    height: 56px;
-    background-color: white;
-    border: solid 0.5px rgba(0, 0, 0, 0.1);
-    border-radius: 12px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-    cursor: pointer;
+  width: 200px;
+  height: 56px;
+  background-color: white;
+  border: solid 0.5px rgba(0, 0, 0, 0.1);
+  border-radius: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  cursor: pointer;
 }
 
 .prioButton p {
-    color: black;
+  color: black;
 }
 
 .redButton {
-    background-color: rgb(255, 61, 0);
-    border: solid 0.5px rgba(0, 0, 0, 0.1);
+  background-color: rgb(255, 61, 0);
+  border: solid 0.5px rgba(0, 0, 0, 0.1);
 }
 
 .orangeButton {
-    background-color: rgb(255, 168, 0);
-    border: solid 0.5px rgba(0, 0, 0, 0.1);
-    fill: rebeccapurple;
+  background-color: rgb(255, 168, 0);
+  border: solid 0.5px rgba(0, 0, 0, 0.1);
+  fill: rebeccapurple;
 }
 
 .greenButton {
-    background-color: rgb(122, 226, 41);
-    border: solid 0.5px rgba(0, 0, 0, 0.1);
+  background-color: rgb(122, 226, 41);
+  border: solid 0.5px rgba(0, 0, 0, 0.1);
 }
 
 .whiteText {
-    color: white !important;
+  color: white !important;
 }
 
 .whiteIcon {
-    fill: white;
+  fill: white;
 }
 
 .category {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 #categorySelect {
-    width: 80%;
-    height: 48px;
-    border-radius: 10px;
-    font-size: 20px;
-    font-weight: 400;
-    padding: 10px;
-    font-size: 16px;
-    appearance: none;
+  width: 84%;
+  height: 48px;
+  border-radius: 10px;
+  font-weight: 400;
+  padding: 10px;
+  font-size: 16px;
+  appearance: none;
 }
 
 .dropDowmArrowCategory {
-    position: relative;
-    top: -25%;
-    right: -36%;
+  position: relative;
+  top: -25%;
+  right: -36%;
 }
 
 .subtasks {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .addSubtasksButton {
-    position: relative;
-    top: -29%;
-    right: -36.4%;
+  position: relative;
+  top: -29%;
+  right: -36.4%;
 }
 
 #deleteOrSave {
-    position: relative;
-    top: -30%;
-    right: -33%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-    gap: 8px;
+  position: relative;
+  top: -30%;
+  right: -33%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  gap: 8px;
 }
 
 .smallLine {
-    width: 0.5px;
-    height: 25px;
-    background-color: black;
+  width: 0.5px;
+  height: 25px;
+  background-color: black;
 }
 
 .d_none {
-    display: none !important;
+  display: none !important;
 }
 
 .rotateToDeleteBtn {
-    transform: rotate(45deg);
-    cursor: pointer;
+  transform: rotate(45deg);
+  cursor: pointer;
 }
 
 #checkSubtasks {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .subtasksContent {
-    width: 80%;
-    height: 150px;
-    margin-top: -18px;
-    overflow-y: auto;
+  width: 80%;
+  max-height: 400px;
+  margin-top: -18px;
+  overflow-y: auto;
 }
 
 .finalButtons {
-    width: 80%;
-    height: 53px;
-    display: flex;
-    justify-content: end;
-    align-items: center;
-    flex-direction: row;
-    gap: 16px;
+  width: 80%;
+  height: 53px;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  flex-direction: row;
+  gap: 16px;
+  margin-top:60px;
 }
 
 .cancelBtn {
-    cursor: pointer;
-    width: 120px;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-    border: 1px solid #2A3647;
-    border-radius: 10px;
-    background: transparent;
-    font-size: 18px;
-    color: #2A3647;
+  cursor: pointer;
+  width: 120px;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  border: 1px solid #2a3647;
+  border-radius: 10px;
+  background: transparent;
+  font-size: 24px;
+  color: #2a3647;
 }
 
 .cancelBtn:hover {
-    background: #29ABE2;
-    border: 1px solid #29abe2;
-    box-shadow: 0px 4px 10px 0px #000000;
-    transition: 0.2s ease;
+  background: #29abe2;
+  border: 1px solid #29abe2;
+  box-shadow: 0px 4px 10px 0px #000000;
+  transition: 0.2s ease;
 }
 
 .createBtn {
-    cursor: pointer;
-    width: 215px;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-    background-color: #2A3647;
-    border-radius: 10px;
-    color: white;
-    font-size: 19px;
-    white-space: nowrap;
+  cursor: pointer;
+  width: 180px;
+  height: 60px;
+  font-size: 24px;
+  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  background-color: #2a3647;
+  border-radius: 10px;
+  color: white;
+  white-space: nowrap;
 }
 
 .createBtn:hover {
-    background: #29ABE2;
-    border: 1px solid #29abe2;
-    box-shadow: 0px 4px 10px 0px #000000;
-    transition: 0.2s ease;
+  background: #29abe2;
+  border: 1px solid #29abe2;
+  box-shadow: 0px 4px 10px 0px #000000;
+  transition: 0.2s ease;
 }
 
-.containerContacts {
-    width: 80%;
-    max-height: 0;
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    flex-direction: column;
-    background-color: white;
-    box-shadow: 0px 3px 5px 1px rgba(0, 0, 0, 0.3);
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-    margin-top: -5.4px;
-    opacity: 0;
-    transition: max-height 1s ease, opacity 1s ease;
+.container {
+  width: 80%;
+  max-height: 0;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  flex-direction: column;
+  background-color: white;
+  box-shadow: 0px 3px 5px 1px rgba(0, 0, 0, 0.3);
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  margin-top: -5.4px;
+  opacity: 0;
+  transition: max-height 1s ease, opacity 1s ease;
 }
 
-.containerContacts.open {
-    max-height: 230px;
-    opacity: 1;
-    overflow-y: auto;
+.container.open {
+  max-height: 230px;
+  opacity: 1;
+  overflow-y: auto;
 }
 
 .contact {
-    width: 98%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-direction: row;
+  width: 98%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
 }
 
 #initialsOverlay {
-    width: 35px;
-    height: 35px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    font-size: 12px;
-    color: white;
+  width: 35px;
+  height: 35px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  font-size: 12px;
+  color: white;
 }
 
 #contactName {
-    width: 80%;
-    text-align: start;
+  width: 80%;
+  text-align: start;
 }
 
 .turnArrow {
-    transform: rotate(180deg);
-    transition: transform 0.3s ease;
+  transform: rotate(180deg);
+  transition: transform 0.3s ease;
 }
 
 .subtaskSingle {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-direction: row;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
 }
 
 .editDeleteButtons {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-direction: row;
-    gap: 4px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  gap: 4px;
 }
 
 .editSubtaskDiv {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-direction: row;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
 }
 
 .editSubtask {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-direction: row;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
 }
 
 .subtaskSingle {
-    width: 100%;
-    height: 35px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-direction: row;
-    border-radius: 10px;
+  width: 100%;
+  height: 45px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  border-radius: 10px;
 }
 
 .subtaskSingle:hover {
-    background-color: darkgray;
+  background-color: darkgray;
 }
 
 .subtaskSingle:hover .editDeleteButtons {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-    margin-right: 20px;
-    gap: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  margin-right: 20px;
+  gap: 8px;
 }
 
 .subtaskSingle p {
-    color: black;
-    margin-left: 20px;
+  color: black;
+  margin-left: 20px;
 }
 
 .editDeleteButtons {
-    display: none;
+  display: none;
 }
 
 .editDeleteButtons:hover {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-    margin-right: 20px;
-    gap: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  margin-right: 20px;
+  gap: 8px;
 }
 
 #subtaskInputId {
-    z-index: 1;
-    background-color: transparent;
+  z-index: 1;
+  background-color: transparent;
 }
 
 #deleteOrSave {
-    z-index: 2;
+  z-index: 2;
 }
 
 .editSubtask {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-    position: absolute;
-    top: 80.5%;
-    right: 4.5%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  position: absolute;
+  top: 80.5%;
+  right: 4.5%;
 }
 
 .editSubtaskDiv {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-    margin-top: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  margin-top: 8px;
 }
 
 #editInput {
-    width: 100%;
-    height: 30px;
-    border: none;
-    border-bottom: 2px solid transparent;
-    outline: none;
-    text-decoration: none;
-    transition: border-color 0.3s ease;
-    background-color: transparent;
+  width: 100%;
+  height: 30px;
+  border: none;
+  border-bottom: 2px solid transparent;
+  outline: none;
+  text-decoration: none;
+  transition: border-color 0.3s ease;
+  background-color: transparent;
 }
 
 .pointer {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 #editInput:focus {
-    border-radius: 0;
-    border-bottom-color: blue;
+  border-radius: 0;
+  border-bottom-color: blue;
 }
 
-@media(max-height: 850px) {
-    .subtasksContent {
-        height: 100px;
-    }
-
-    .header {
-        height: 100px;
-    }
+.addTaskCheckIcon {
+    width:32px;
+    height:32px;
 }
